2009-09-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug 12089: Make messages in reports module collapsible

2009-09-30  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12035: BE style must match t3skin in reports module and flash messages (thanks to Tom Ruether)
	* Fixed bug #12036: BE style must match t3skin in Install Tool (thanks to Tom Ruether)

2009-09-30  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12080 (Follow-up to bug #11505): pageCacheToExternalFiles=1 breaks db-caching in 4.3
	* Fixed bug #12082: PHP fatal error with frameset page
	* Fixed bug #12085: Memcached Configuration status report is broken

2009-09-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #12068: Scheduler: Improper skipping of running tasks in case multiple execution denied

2009-09-29  Rupert Germann  <rupi@gmx.li>

	* Added feature #9355: Add an error and exception handler (backported from FLOW3) (thanks to Ingo Renner)
	* Added improvement #11855: security related links in EM are not marked as links.
	* Fixed bug #12032: The message "The selected language is not available..." in EM tranlation handling wrong if no language can be chosen (Thanks to Georg Ringer)

2009-09-29  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11433: touch(): Utime failed in install tool (thanks to Steffen Gebert)
	* Added feature #12076: Integration of saltedpasswords as system extension (thanks to Marcus Krause & Steffen Ritter)

2009-09-28  Benjamin Mack  <benni@typo3.org>

	* Included feeditadvanced as system extension through svn:externals (tag 43beta1)

2009-09-25  Benjamin Mack  <benni@typo3.org>

	* Fixed #8802: Fileadmin: extensions of new files should only show allowed extensions (Thanks to Steffen Gebert)
	* Cleanup #11357: Make use of new t3lib_div::redirect function throughout the core

2009-09-25  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12046: Skinning possibilities are not available with frontend editing
	* Cleanup: Updated NEWS.txt